--- a/movies-app/src/common/ReleaseList/ReleaseList.css
+++ b/movies-app/src/common/ReleaseList/ReleaseList.css
@@ -1,4 +1,5 @@
 .flex-container{
+    display: flex;
     width:100%;
 }
 
@@ -10,7 +11,17 @@
 
 }
 
+.right{
+    height: 100%;
+    
+    width: 24%;
+    margin: 16px;
+    border: 2px solid black;
+
+}
+
 .left{
+    border: 2px solid black;
     display: grid;
     grid-template-columns: 25% 25% 25% 25% ;
     
